--- a/Rotas-e-HTTP/02-api-rest-nodejs/package.json
+++ b/Rotas-e-HTTP/02-api-rest-nodejs/package.json
@@ -3,13 +3,16 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "tsx watch src/server.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/node": "^20.14.5",
+    "tsx": "^4.15.6",
     "typescript": "^5.4.5"
   },
   "dependencies": {
