--- a/Rotas-e-HTTP/02-api-rest-nodejs/package.json
+++ b/Rotas-e-HTTP/02-api-rest-nodejs/package.json
@@ -4,14 +4,17 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "tsx watch src/server.ts"
+    "dev": "tsx watch src/server.ts",
+    "lint": "eslint src --ext .ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@rocketseat/eslint-config": "^2.2.2",
     "@types/node": "^20.14.5",
+    "eslint": "^8.57.0",
     "tsx": "^4.15.6",
     "typescript": "^5.4.5"
   },
