--- a/Rotas-e-HTTP/02-api-rest-nodejs/package.json
+++ b/Rotas-e-HTTP/02-api-rest-nodejs/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "tsx watch src/server.ts",
-    "lint": "eslint src --ext .ts"
+    "lint": "eslint src --ext .ts",
+    "knex": "node --import tsx ./node_modules/.bin/knex"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +20,7 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "fastify": "^4.28.0",
     "knex": "^3.1.0",
     "sqlite3": "^5.1.7"
