--- a/Rotas-e-HTTP/02-api-rest-nodejs/package.json
+++ b/Rotas-e-HTTP/02-api-rest-nodejs/package.json
@@ -6,7 +6,8 @@
     "dev": "tsx watch src/server.ts",
     "lint": "eslint src --ext .ts",
     "knex": "node --import tsx ./node_modules/.bin/knex",
-    "test": "vitest"
+    "test": "vitest",
+    "build": "tsup src --out-dir build"
   },
   "keywords": [],
   "author": "",
