--- a/Rotas-e-HTTP/02-api-rest-nodejs/package.json
+++ b/Rotas-e-HTTP/02-api-rest-nodejs/package.json
@@ -2,6 +2,9 @@
   "name": "02-api-rest-nodejs",
   "version": "1.0.0",
   "main": "index.js",
+  "engines": {
+    "node": ">= 18"
+  },
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "lint": "eslint src --ext .ts",
@@ -28,6 +31,7 @@
     "dotenv": "^16.4.5",
     "fastify": "^4.28.0",
     "knex": "^3.1.0",
+    "pg": "^8.12.0",
     "sqlite3": "^5.1.7",
     "zod": "^3.23.8"
   }
